--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dipta Roy - Product Security Specialist | Portfolio</title>
     <meta name="description"
-        content="Dipta Roy - Product Security Specialist with 8+ years of experience in Healthcare, Med-Tech, IT, and Aerospace domains. Expert in threat modeling, vulnerability assessments, and regulatory compliance.">
+        content="Dipta Roy - Product Security Specialist with 89+ years of experience in Healthcare, Med-Tech, IT, and Aerospace domains. Expert in threat modeling, vulnerability assessments, and regulatory compliance.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -62,7 +62,7 @@
                     </h1>
                     <h2 class="hero-subtitle">Product Security Specialist</h2>
                     <p class="hero-description">
-                        Transforming healthcare and med-tech security through 8+ years of expertise in
+                        Transforming healthcare and med-tech security through 9+ years of expertise in
                         threat modeling, vulnerability assessments, and FDA compliance. Building secure
                         architectures that protect millions of users.
                     </p>
@@ -76,20 +76,19 @@
                             title="LinkedIn">
                             <i class="fab fa-linkedin"></i>
                         </a>
-                        <a href="#" target="_blank" class="social-link" title="Twitter">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a href="#" target="_blank" class="social-link" title="Instagram">
+                        <a href="https://www.instagram.com/diptaroy73/" target="_blank" class="social-link"
+                            title="Instagram">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a href="#" target="_blank" class="social-link" title="Facebook">
+                        <a href="https://www.facebook.com/dipta.roy.73/" target="_blank" class="social-link"
+                            title="Facebook">
                             <i class="fab fa-facebook"></i>
                         </a>
                     </div>
 
                     <div class="hero-stats">
                         <div class="stat-item">
-                            <div class="stat-value">8+</div>
+                            <div class="stat-value">9+</div>
                             <div class="stat-label">Years Experience</div>
                         </div>
                         <div class="stat-item">
@@ -712,15 +711,11 @@
                             <i class="fab fa-linkedin"></i>
                             <span>LinkedIn</span>
                         </a>
-                        <a href="#" target="_blank" class="social-media-card">
-                            <i class="fab fa-twitter"></i>
-                            <span>Twitter</span>
-                        </a>
-                        <a href="#" target="_blank" class="social-media-card">
+                        <a href="https://www.instagram.com/diptaroy73/" target="_blank" class="social-media-card">
                             <i class="fab fa-instagram"></i>
                             <span>Instagram</span>
                         </a>
-                        <a href="#" target="_blank" class="social-media-card">
+                        <a href="https://www.facebook.com/dipta.roy.73/" target="_blank" class="social-media-card">
                             <i class="fab fa-facebook"></i>
                             <span>Facebook</span>
                         </a>
@@ -742,9 +737,8 @@
                 <div class="footer-social">
                     <a href="https://github.com/dipta-roy" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="https://linkedin.com/in/dipta-roy" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/diptaroy73/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/dipta.roy.73/" target="_blank"><i class="fab fa-facebook"></i></a>
                 </div>
                 <div class="footer-links">
                     <a href="#home">Home</a>
