--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dipta Roy - Product Security Specialist | Portfolio</title>
+    <title>Dipta Roy - Product Security Specialist</title>
     <meta name="description"
-        content="Dipta Roy - Product Security Specialist with 89+ years of experience in Healthcare, Med-Tech, IT, and Aerospace domains. Expert in threat modeling, vulnerability assessments, and regulatory compliance.">
+        content="Dipta Roy - Product Security Specialist with 9+ years of experience in Healthcare, Med-Tech, IT, and Aerospace domains. Expert in threat modeling, vulnerability assessments, and regulatory compliance.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -72,16 +72,13 @@
                         <a href="https://github.com/dipta-roy" target="_blank" class="social-link" title="GitHub">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="https://linkedin.com/in/dipta-roy" target="_blank" class="social-link"
-                            title="LinkedIn">
+                        <a href="https://linkedin.com/in/dipta-roy" target="_blank" class="social-link" title="LinkedIn">
                             <i class="fab fa-linkedin"></i>
                         </a>
-                        <a href="https://www.instagram.com/diptaroy73/" target="_blank" class="social-link"
-                            title="Instagram">
+                        <a href="https://www.instagram.com/diptaroy73/" target="_blank" class="social-link" title="Instagram">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a href="https://www.facebook.com/dipta.roy.73/" target="_blank" class="social-link"
-                            title="Facebook">
+                        <a href="https://www.facebook.com/dipta.roy.73/" target="_blank" class="social-link" title="Facebook">
                             <i class="fab fa-facebook"></i>
                         </a>
                     </div>
@@ -118,11 +115,11 @@
                         </div>
                         <div class="floating-badge badge-2">
                             <span class="badge-emoji">🏥</span>
-                            <span>Healthcare</span>
+                            <span>Med-Tech</span>
                         </div>
                         <div class="floating-badge badge-3">
-                            <span class="badge-emoji">✅</span>
-                            <span>FDA Compliance</span>
+                            <span class="badge-emoji">🛩️</span>
+                            <span>Aerospace</span>
                         </div>
                     </div>
                 </div>
@@ -192,7 +189,6 @@
                             <div class="education-content">
                                 <h4>M.Sc. in Computer Applications (CSA)</h4>
                                 <p>CHRIST University, Bengaluru</p>
-                                <span class="education-grade">9.06 CGPA</span>
                             </div>
                         </div>
                         <div class="education-item">
@@ -200,19 +196,12 @@
                             <div class="education-content">
                                 <h4>Bachelor of Computer Applications</h4>
                                 <p>Bangalore University</p>
-                                <span class="education-grade">73%</span>
                             </div>
                         </div>
                         <div class="education-item">
                             <div class="education-content">
                                 <h4>Applied Cybersecurity Essentials</h4>
                                 <p>Purdue University</p>
-                            </div>
-                        </div>
-                        <div class="education-item">
-                            <div class="education-content">
-                                <h4>Cybersecurity Courses</h4>
-                                <p>University of Colorado</p>
                             </div>
                         </div>
                     </div>
