--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://dipta-roy.github.io/me/">
+    <meta property="og:url" content="https://dipta-roy.github.io/">
     <meta property="og:title" content="Dipta Roy - Product Security Specialist">
     <meta property="og:description"
         content="Dipta Roy is a Bengaluru-based Product Security Specialist with 9+ years in healthcare cybersecurity. Expert in threat modeling, FDA/HIPAA compliance, and secure SDLC.">
-    <meta property="og:image" content="https://dipta-roy.github.io/me/assets/img/Profile_Image.png">
+    <meta property="og:image" content="https://dipta-roy.github.io/assets/img/Profile_Image.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://dipta-roy.github.io/me/">
+    <meta property="twitter:url" content="https://dipta-roy.github.io/">
     <meta property="twitter:title" content="Dipta Roy - Product Security Specialist">
     <meta property="twitter:description"
         content="Dipta Roy is a Bengaluru-based Product Security Specialist with 9+ years in healthcare cybersecurity. Expert in threat modeling, FDA/HIPAA compliance, and secure SDLC.">
-    <meta property="twitter:image" content="https://dipta-roy.github.io/me/assets/img/Profile_Image.png">
+    <meta property="twitter:image" content="https://dipta-roy.github.io/assets/img/Profile_Image.png">
 
     <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
@@ -36,8 +36,8 @@
       "@context": "https://schema.org",
       "@type": "Person",
       "name": "Dipta Roy",
-      "url": "https://dipta-roy.github.io/me/",
-      "image": "https://dipta-roy.github.io/me/assets/img/Profile_Image.png",
+      "url": "https://dipta-roy.github.io/",
+      "image": "https://dipta-roy.github.io/assets/img/Profile_Image.png",
       "sameAs": [
         "https://linkedin.com/in/dipta-roy",
         "https://github.com/dipta-roy",
@@ -60,7 +60,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="canonical" href="https://dipta-roy.github.io/me/">
+    <link rel="canonical" href="https://dipta-roy.github.io/">
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Space+Grotesk:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
