--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dipta Roy</title>
-	<link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
     <meta name="google-site-verification" content="V2aWVlDv5P8RGX3Jwh850Y5VYpejlc5atUr3PNJCR8k" />
     <meta name="description"
         content="Dipta Roy is a Bengaluru-based Product Security Specialist with 9+ years in healthcare cybersecurity. Expert in threat modeling, FDA/HIPAA compliance, SAST/SCA tools, and secure SDLC.">
@@ -89,6 +89,7 @@
                 <li><a href="#experience" class="nav-link">Experience</a></li>
                 <li><a href="#skills" class="nav-link">Skills</a></li>
                 <li><a href="#github" class="nav-link">GitHub</a></li>
+                <li><a href="#downloads" class="nav-link">Downloads</a></li>
                 <li><a href="#certifications" class="nav-link">Certifications</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
@@ -643,6 +644,79 @@
                 <a href="https://github.com/dipta-roy" target="_blank" rel="noopener noreferrer"
                     class="btn btn-primary">
                     <i class="fab fa-github"></i> View All Repositories
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Downloads Section -->
+    <section id="downloads" class="downloads-section">
+        <div class="container">
+            <div class="section-header">
+                <span class="section-tag">Downloads</span>
+                <h2 class="section-title">Software Downloads</h2>
+                <p class="section-subtitle">Direct download links for my latest tools and applications</p>
+            </div>
+
+            <div class="downloads-grid">
+                <!-- Secure Vault 1.3 -->
+                <a href="https://github.com/dipta-roy/SecureVault/releases/download/v1.3/SecureVault.1.3.Portable.zip"
+                    class="download-card">
+                    <div class="download-card-header">
+                        <i class="fas fa-download download-icon"></i>
+                        <span class="version-badge">v1.3</span>
+                    </div>
+                    <h3>Secure Vault</h3>
+                    <p>Portable version of Secure Vault password manager.</p>
+                    <div class="download-footer">
+                        <span class="file-type">ZIP Archive</span>
+                        <span class="download-link">Download Now →</span>
+                    </div>
+                </a>
+
+                <!-- PlanIFlow 1.4 -->
+                <a href="https://github.com/dipta-roy/PlanIFlow/releases/download/v1.4/PlanIFlow.1.4.Portable.zip"
+                    class="download-card">
+                    <div class="download-card-header">
+                        <i class="fas fa-download download-icon"></i>
+                        <span class="version-badge">v1.4</span>
+                    </div>
+                    <h3>PlanIFlow</h3>
+                    <p>Portable version of PlanIFlow project management tool.</p>
+                    <div class="download-footer">
+                        <span class="file-type">ZIP Archive</span>
+                        <span class="download-link">Download Now →</span>
+                    </div>
+                </a>
+
+                <!-- Bok Bok 2.0 -->
+                <a href="https://github.com/dipta-roy/dipta-roy.github.io/blob/main/downloads/Bok%20Bok%202%20Portable.zip?raw=true"
+                    class="download-card">
+                    <div class="download-card-header">
+                        <i class="fas fa-download download-icon"></i>
+                        <span class="version-badge">v2.0</span>
+                    </div>
+                    <h3>Bok Bok</h3>
+                    <p>Portable version of Bok Bok text-to-speech utility.</p>
+                    <div class="download-footer">
+                        <span class="file-type">ZIP Archive</span>
+                        <span class="download-link">Download Now →</span>
+                    </div>
+                </a>
+
+                <!-- Code Verifying Certificate -->
+                <a href="https://github.com/dipta-roy/dipta-roy.github.io/blob/main/downloads/Code%20Verifying%20Certificates.zip?raw=true"
+                    class="download-card">
+                    <div class="download-card-header">
+                        <i class="fas fa-certificate download-icon"></i>
+                        <span class="version-badge">Cert</span>
+                    </div>
+                    <h3>Code Verifying Certificate</h3>
+                    <p>Certificates for verifying code signatures.</p>
+                    <div class="download-footer">
+                        <span class="file-type">ZIP Archive</span>
+                        <span class="download-link">Download Now →</span>
+                    </div>
                 </a>
             </div>
         </div>
