--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
             <ul class="nav-menu" id="navMenu">
                 <li><a href="#home" class="nav-link active">Home</a></li>
-                <li><a href="#about" class="nav-link">About</a></li>
+                <li><a href="#about" class="nav-link">Who A I</a></li>
                 <li><a href="#experience" class="nav-link">Experience</a></li>
                 <li><a href="#skills" class="nav-link">Skills</a></li>
                 <li><a href="#github" class="nav-link">GitHub</a></li>
@@ -116,7 +116,7 @@
                     <h2 class="hero-subtitle">Product Security Specialist</h2>
                     <p class="hero-description">
                         Transforming healthcare and med-tech security through 9+ years of expertise in
-                        threat modeling, vulnerability assessments, and FDA compliance. Building secure
+                        threat modeling, vulnerability assessments, and FDA compliant technology. Building secure
                         architectures that protect millions of users.
                     </p>
 
@@ -129,14 +129,6 @@
                         <a href="https://linkedin.com/in/dipta-roy" target="_blank" rel="noopener noreferrer"
                             class="social-link" title="LinkedIn" aria-label="LinkedIn">
                             <i class="fab fa-linkedin"></i>
-                        </a>
-                        <a href="https://www.instagram.com/diptaroy73/" target="_blank" rel="noopener noreferrer"
-                            class="social-link" title="Instagram" aria-label="Instagram">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                        <a href="https://www.facebook.com/dipta.roy.73/" target="_blank" rel="noopener noreferrer"
-                            class="social-link" title="Facebook" aria-label="Facebook">
-                            <i class="fab fa-facebook"></i>
                         </a>
                     </div>
 
@@ -192,7 +184,7 @@
     <section id="about" class="about-section">
         <div class="container">
             <div class="section-header">
-                <span class="section-tag">Who I Am</span>
+                <span class="section-tag">Who Am I</span>
                 <h2 class="section-title">About Me</h2>
                 <p class="section-subtitle">Passionate about securing the future of healthcare technology</p>
             </div>
@@ -306,7 +298,7 @@
                             <li>Performed SAST using Checkmarx, reducing vulnerabilities by 30%</li>
                             <li>Executed SCA to identify risky third-party libraries and licensing issues</li>
                             <li>Conducted infrastructure security scans using Tenable.io</li>
-                            <li>Managed patch rollouts for released medical software products</li>
+                            <li>Managed patch management including rollouts for released medical software products</li>
                             <li>Conducted threat modeling and trained dev teams on security best practices</li>
                             <li>Authored security documents for medical devices</li>
                             <li>Mentored internal security team and standardized processes via SOPs</li>
@@ -521,7 +513,7 @@
                         <span class="github-stars">⭐</span>
                     </div>
                     <h3>SecureVault</h3>
-                    <p>Encrypted password manager with advanced security features</p>
+                    <p>Local password manager with advanced security features</p>
                     <div class="github-footer">
                         <span class="github-language">Python</span>
                         <span class="github-link">View on GitHub →</span>
@@ -534,7 +526,7 @@
                         <i class="fab fa-github github-icon"></i>
                         <span class="github-stars">⭐</span>
                     </div>
-                    <h3>Windows-Analyzer</h3>
+                    <h3>Windows Analyzer</h3>
                     <p>Comprehensive Windows system analysis and diagnostics tool</p>
                     <div class="github-footer">
                         <span class="github-language">PowerShell</span>
@@ -548,10 +540,10 @@
                         <i class="fab fa-github github-icon"></i>
                         <span class="github-stars">⭐</span>
                     </div>
-                    <h3>CodeSigningUtility</h3>
-                    <p>Automated code signing utility for secure software distribution</p>
+                    <h3>Code Signing Utility</h3>
+                    <p>Code signing utility for secure software distribution</p>
                     <div class="github-footer">
-                        <span class="github-language">C#</span>
+                        <span class="github-language">PowerShell</span>
                         <span class="github-link">View on GitHub →</span>
                     </div>
                 </a>
@@ -562,8 +554,8 @@
                         <i class="fab fa-github github-icon"></i>
                         <span class="github-stars">⭐</span>
                     </div>
-                    <h3>AI-Model-Scanner</h3>
-                    <p>Security scanner for AI/ML models and datasets</p>
+                    <h3>AI Model Scanner</h3>
+                    <p>Security scanner for LLM based AI/ML models and datasets</p>
                     <div class="github-footer">
                         <span class="github-language">Python</span>
                         <span class="github-link">View on GitHub →</span>
@@ -577,7 +569,7 @@
                         <span class="github-stars">⭐</span>
                     </div>
                     <h3>AI-RAG</h3>
-                    <p>Retrieval Augmented Generation implementation for AI applications</p>
+                    <p>Local Ratrieval Augmented Generation implementation for AI applications</p>
                     <div class="github-footer">
                         <span class="github-language">Python</span>
                         <span class="github-link">View on GitHub →</span>
@@ -590,7 +582,7 @@
                         <i class="fab fa-github github-icon"></i>
                         <span class="github-stars">⭐</span>
                     </div>
-                    <h3>Computer-Graphics</h3>
+                    <h3>Computer Graphics</h3>
                     <p>Collection of computer graphics algorithms and projects</p>
                     <div class="github-footer">
                         <span class="github-language">C++</span>
@@ -618,7 +610,7 @@
                         <i class="fab fa-github github-icon"></i>
                         <span class="github-stars">⭐</span>
                     </div>
-                    <h3>MicrosoftBaselineScan</h3>
+                    <h3>Microsoft Baseline Scan</h3>
                     <p>Security baseline scanner for Microsoft environments</p>
                     <div class="github-footer">
                         <span class="github-language">PowerShell</span>
@@ -632,7 +624,7 @@
                         <i class="fab fa-github github-icon"></i>
                         <span class="github-stars">⭐</span>
                     </div>
-                    <h3>CVE_Info_Fetcher</h3>
+                    <h3>CVE Info Fetcher</h3>
                     <p>Automated CVE information retrieval and analysis tool</p>
                     <div class="github-footer">
                         <span class="github-language">Python</span>
@@ -697,7 +689,7 @@
                         <span class="version-badge">Cert</span>
                     </div>
                     <h3>Code Verifying Certificate</h3>
-                    <p>Certificates for verifying code signatures.</p>
+                    <p>Public certificate for verifying code signatures.</p>
                     <div class="download-footer">
                         <span class="file-type">ZIP Archive</span>
                         <span class="download-link">Download Now →</span>
@@ -789,11 +781,6 @@
             </div>
             <div class="contact-content">
                 <div class="contact-cards">
-                    <a href="mailto:dipta_r@ymail.com" class="contact-card">
-                        <div class="contact-card-icon">📧</div>
-                        <h3>Email</h3>
-                        <p>dipta_r@ymail.com</p>
-                    </a>
                     <a href="https://linkedin.com/in/dipta-roy" target="_blank" rel="noopener noreferrer"
                         class="contact-card">
                         <div class="contact-card-icon">💼</div>
@@ -821,16 +808,6 @@
                             <i class="fab fa-linkedin"></i>
                             <span>LinkedIn</span>
                         </a>
-                        <a href="https://www.instagram.com/diptaroy73/" target="_blank" rel="noopener noreferrer"
-                            class="social-media-card">
-                            <i class="fab fa-instagram"></i>
-                            <span>Instagram</span>
-                        </a>
-                        <a href="https://www.facebook.com/dipta.roy.73/" target="_blank" rel="noopener noreferrer"
-                            class="social-media-card">
-                            <i class="fab fa-facebook"></i>
-                            <span>Facebook</span>
-                        </a>
                     </div>
                 </div>
             </div>
@@ -851,14 +828,10 @@
                         aria-label="GitHub"><i class="fab fa-github"></i></a>
                     <a href="https://linkedin.com/in/dipta-roy" target="_blank" rel="noopener noreferrer"
                         aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://www.instagram.com/diptaroy73/" target="_blank" rel="noopener noreferrer"
-                        aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="https://www.facebook.com/dipta.roy.73/" target="_blank" rel="noopener noreferrer"
-                        aria-label="Facebook"><i class="fab fa-facebook"></i></a>
                 </div>
                 <div class="footer-links">
                     <a href="#home">Home</a>
-                    <a href="#about">About</a>
+                    <a href="#about">Who Am I</a>
                     <a href="#experience">Experience</a>
                     <a href="#skills">Skills</a>
                     <a href="#github">GitHub</a>
