--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
             <ul class="nav-menu" id="navMenu">
                 <li><a href="#home" class="nav-link active">Home</a></li>
-                <li><a href="#about" class="nav-link">Who A I</a></li>
+                <li><a href="#about" class="nav-link">Who Am I</a></li>
                 <li><a href="#experience" class="nav-link">Experience</a></li>
                 <li><a href="#skills" class="nav-link">Skills</a></li>
                 <li><a href="#github" class="nav-link">GitHub</a></li>
