--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="assets/css/index.css">
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-2EZ7F16X02"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	  gtag('config', 'G-2EZ7F16X02');
+	</script>
 </head>
 
 <body>
