--- a/clock/index.html
+++ b/clock/index.html
@@ -2,6 +2,13 @@
 	<head>
 		<title> Digital Clock</title>
 		<link rel="icon" href="images/clock.png" type="image/x-icon" />
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-2EZ7F16X02"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() { dataLayer.push(arguments); }
+			gtag('js', new Date());
+			gtag('config', 'G-2EZ7F16X02');
+		</script>
 		<meta name="description" content="Digital Clock designed to use as screensaver. Kindly change  view to sull screen using F11 and enjoy this. For more details contact Dipta at https://www.diptaroy.tk">
 		<meta name="author" content="Dipta Roy">
 		<script type="text/javascript" src="../snake/jquery-1.5.2.min.js"></script>
