--- a/index.html
+++ b/index.html
@@ -674,12 +674,12 @@
                     </div>
                 </a>
 
-                <!-- PlanIFlow 1.6 -->
-                <a href="https://github.com/dipta-roy/PlanIFlow/releases/download/v1.6/PlanIFlow_1.6.zip"
+                <!-- PlanIFlow 1.6.1 -->
+                <a href="https://github.com/dipta-roy/PlanIFlow/releases/download/v1.6.1/PlanIFlow_1.6.1.zip"
                     class="download-card">
                     <div class="download-card-header">
                         <i class="fas fa-download download-icon"></i>
-                        <span class="version-badge">v1.6</span>
+                        <span class="version-badge">v1.6.1</span>
                     </div>
                     <h3>PlanIFlow</h3>
                     <p>Portable version of PlanIFlow project management tool.</p>
@@ -718,7 +718,7 @@
 
             <div class="downloads-grid">
                 <!-- Chess -->
-                <a href="https://github.com/dipta-roy/chess"
+                <a href="https://dipta-roy.github.io/chess"
                     class="download-card">
                     <div class="download-card-header">
                         <i class="fa fa-gamepad"></i>
@@ -731,7 +731,7 @@
                 </a>
 
                 <!-- Snake game -->
-                <a href="https://github.com/dipta-roy/snake"
+                <a href="https://dipta-roy.github.io/snake"
                     class="download-card">
                     <div class="download-card-header">
                         <i class="fa fa-gamepad"></i>
