--- a/index.html
+++ b/index.html
@@ -674,17 +674,17 @@
                     </div>
                 </a>
 
-                <!-- PlanIFlow 2.0.0 -->
-                <a href="https://github.com/dipta-roy/PlanIFlow/releases/download/v2.0.0/PlanIFlow_2.0.0.zip"
+                <!-- PlanIFlow 2.1.0 -->
+                <a href="https://github.com/dipta-roy/PlanIFlow/releases/download/2.1.0/PlanIFlow_Setup_2.1.0.exe"
                     class="download-card">
                     <div class="download-card-header">
                         <i class="fas fa-download download-icon"></i>
-                        <span class="version-badge">v2.0.0</span>
+                        <span class="version-badge">v2.1.0</span>
                     </div>
                     <h3>PlanIFlow</h3>
                     <p>Portable version of PlanIFlow project management tool.</p>
                     <div class="download-footer">
-                        <span class="file-type">ZIP Archive</span>
+                        <span class="file-type">EXE Executable</span>
                         <span class="download-link">Download Now →</span>
                     </div>
                 </a>
