--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@
                     </div>
                     <h3>Digital Clock</h3>
                     <div class="download-footer">
-                        <span class="download-link">Download Now →</span>
+                        <span class="download-link">Open Now →</span>
                     </div>
                 </a>
             </div>
