--- a/index.html
+++ b/index.html
@@ -528,7 +528,21 @@
                     </div>
                 </a>
 
-                <a href="https://github.com/dipta-roy/Windows-Analyzer" target="_blank" rel="noopener noreferrer"
+                <a href="https://github.com/dipta-roy/TwinScope" target="_blank" rel="noopener noreferrer"
+                    class="github-card" data-category="utilities">
+                    <div class="github-card-header">
+                        <i class="fab fa-github github-icon"></i>
+                        <span class="github-stars">⭐</span>
+                    </div>
+                    <h3>TwinScope</h3>
+                    <p>TwinScope is a cross-platform file and folder comparison tool</p>
+                    <div class="github-footer">
+                        <span class="github-language">Python</span>
+                        <span class="github-link">View on GitHub →</span>
+                    </div>
+                </a>
+				
+				<a href="https://github.com/dipta-roy/Windows-Analyzer" target="_blank" rel="noopener noreferrer"
                     class="github-card" data-category="windows">
                     <div class="github-card-header">
                         <i class="fab fa-github github-icon"></i>
@@ -689,6 +703,21 @@
                     </div>
                 </a>
 
+				<!-- TwinScope -->
+                <a href="https://github.com/dipta-roy/TwinScope/releases/download/v1.0/TwinScope.1.0.exe"
+                    class="download-card">
+                    <div class="download-card-header">
+                        <i class="fas fa-download download-icon"></i>
+                        <span class="version-badge">v1.0</span>
+                    </div>
+                    <h3>TwinScope</h3>
+                    <p>A cross-platform file and folder comparison tool</p>
+                    <div class="download-footer">
+                        <span class="file-type">EXE Executable</span>
+                        <span class="download-link">Download Now →</span>
+                    </div>
+                </a>
+				
                 <!-- Code Verifying Certificate -->
                 <a href="https://github.com/dipta-roy/dipta-roy.github.io/blob/main/downloads/Code%20Verifying%20Certificates.zip?raw=true"
                     class="download-card">
