--- a/index.html
+++ b/index.html
@@ -688,12 +688,12 @@
                     </div>
                 </a>
 
-                <!-- PlanIFlow 2.1.0 -->
-                <a href="https://github.com/dipta-roy/PlanIFlow/releases/download/2.1.0/PlanIFlow_Setup_2.1.0.exe"
+                <!-- PlanIFlow 2.2.0 -->
+                <a href="https://github.com/dipta-roy/PlanIFlow/releases/download/v2.2/PlanIFlow_Setup_2.2.0.exe"
                     class="download-card">
                     <div class="download-card-header">
                         <i class="fas fa-download download-icon"></i>
-                        <span class="version-badge">v2.1.0</span>
+                        <span class="version-badge">v2.2.0</span>
                     </div>
                     <h3>PlanIFlow</h3>
                     <p>Portable version of PlanIFlow project management tool.</p>
@@ -703,12 +703,12 @@
                     </div>
                 </a>
 
-				<!-- TwinScope -->
-                <a href="https://github.com/dipta-roy/TwinScope/releases/download/v1.0/TwinScope.1.0.exe"
+				<!-- TwinScope v1.1 -->
+                <a href="https://github.com/dipta-roy/TwinScope/releases/download/v1.1/TwinScope_Setup_1.1.0.exe"
                     class="download-card">
                     <div class="download-card-header">
                         <i class="fas fa-download download-icon"></i>
-                        <span class="version-badge">v1.0</span>
+                        <span class="version-badge">v1.1</span>
                     </div>
                     <h3>TwinScope</h3>
                     <p>A cross-platform file and folder comparison tool</p>
