--- a/index.html
+++ b/index.html
@@ -703,8 +703,8 @@
                     </div>
                 </a>
 
-				<!-- TwinScope v1.1 -->
-                <a href="https://github.com/dipta-roy/TwinScope/releases/download/v1.1/TwinScope_Setup_1.1.0.exe"
+				<!-- TwinScope 1.1 -->
+                <a href="https://github.com/dipta-roy/TwinScope/releases/download/v1.1/TwinScope_Setup_1.1.0.msi"
                     class="download-card">
                     <div class="download-card-header">
                         <i class="fas fa-download download-icon"></i>
@@ -713,7 +713,7 @@
                     <h3>TwinScope</h3>
                     <p>A cross-platform file and folder comparison tool</p>
                     <div class="download-footer">
-                        <span class="file-type">EXE Executable</span>
+                        <span class="file-type">MSI Executable</span>
                         <span class="download-link">Download Now →</span>
                     </div>
                 </a>
