--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
                 </a>
 
                 <!-- PlanIFlow 2.2.0 -->
-                <a href="https://github.com/dipta-roy/PlanIFlow/releases/download/v2.2/PlanIFlow_Setup_2.2.0.exe"
+                <a href="https://github.com/dipta-roy/PlanIFlow/releases/download/v2.2/PlanIFlow_Setup_2.2.0.msi"
                     class="download-card">
                     <div class="download-card-header">
                         <i class="fas fa-download download-icon"></i>
@@ -698,7 +698,7 @@
                     <h3>PlanIFlow</h3>
                     <p>Portable version of PlanIFlow project management tool.</p>
                     <div class="download-footer">
-                        <span class="file-type">EXE Executable</span>
+                        <span class="file-type">MSI Executable</span>
                         <span class="download-link">Download Now →</span>
                     </div>
                 </a>
