--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
                         <span class="version-badge">v2.2.0</span>
                     </div>
                     <h3>PlanIFlow</h3>
-                    <p>Portable version of PlanIFlow project management tool.</p>
+                    <p>A offline project management tool.</p>
                     <div class="download-footer">
                         <span class="file-type">MSI Executable</span>
                         <span class="download-link">Download Now →</span>
