--- a/index.html
+++ b/index.html
@@ -674,8 +674,7 @@
 
             <div class="downloads-grid">
                 <!-- Secure Vault 1.4 -->
-                <a href="https://github.com/dipta-roy/SecureVault/releases/download/v1.4/SecureVault.1.4.Portable.zip"
-                    class="download-card">
+                <div class="download-card">
                     <div class="download-card-header">
                         <i class="fas fa-download download-icon"></i>
                         <span class="version-badge">v1.4</span>
@@ -684,13 +683,17 @@
                     <p>Portable version of Secure Vault password manager.</p>
                     <div class="download-footer">
                         <span class="file-type">ZIP Archive</span>
-                        <span class="download-link">Download Now →</span>
+                        <div class="footer-actions">
+                            <a href="https://www.virustotal.com/gui/file/43e42484e0f560b9301ac74ba99b998babba64f66bf09f096406818279ea07ed" class="vt-link" target="_blank" rel="noopener noreferrer">
+                                <i class="fas fa-shield-alt"></i> VirusTotal
+                            </a>
+                            <a href="https://github.com/dipta-roy/SecureVault/releases/download/v1.4/SecureVault.1.4.Portable.zip" class="download-link">Download Now →</a>
+                        </div>
                     </div>
-                </a>
+                </div>
 
                 <!-- PlanIFlow 2.2.0 -->
-                <a href="https://github.com/dipta-roy/PlanIFlow/releases/download/v2.2/PlanIFlow_Setup_2.2.0.msi"
-                    class="download-card">
+                <div class="download-card">
                     <div class="download-card-header">
                         <i class="fas fa-download download-icon"></i>
                         <span class="version-badge">v2.2.0</span>
@@ -699,13 +702,17 @@
                     <p>A offline project management tool.</p>
                     <div class="download-footer">
                         <span class="file-type">MSI Executable</span>
-                        <span class="download-link">Download Now →</span>
+                        <div class="footer-actions">
+                            <a href="https://www.virustotal.com/gui/file/4eb2c37fd65be9df098b077cc6d0ece2178a6f19b968e559e8344af7466a1d0f" class="vt-link" target="_blank" rel="noopener noreferrer">
+                                <i class="fas fa-shield-alt"></i> VirusTotal
+                            </a>
+                            <a href="https://github.com/dipta-roy/PlanIFlow/releases/download/v2.2/PlanIFlow_Setup_2.2.0.msi" class="download-link">Download Now →</a>
+                        </div>
                     </div>
-                </a>
+                </div>
 
-				<!-- TwinScope 1.1 -->
-                <a href="https://github.com/dipta-roy/TwinScope/releases/download/v1.1/TwinScope_Setup_1.1.0.msi"
-                    class="download-card">
+                <!-- TwinScope 1.1 -->
+                <div class="download-card">
                     <div class="download-card-header">
                         <i class="fas fa-download download-icon"></i>
                         <span class="version-badge">v1.1</span>
@@ -714,9 +721,14 @@
                     <p>A cross-platform file and folder comparison tool</p>
                     <div class="download-footer">
                         <span class="file-type">MSI Executable</span>
-                        <span class="download-link">Download Now →</span>
+                        <div class="footer-actions">
+                            <a href="https://www.virustotal.com/gui/file/ab4e6ad7d1d69cf61f7281129ee847d128d254ee587a7cc4ae282880e28b4e28" class="vt-link" target="_blank" rel="noopener noreferrer">
+                                <i class="fas fa-shield-alt"></i> VirusTotal
+                            </a>
+                            <a href="https://github.com/dipta-roy/TwinScope/releases/download/v1.1/TwinScope_Setup_1.1.0.msi" class="download-link">Download Now →</a>
+                        </div>
                     </div>
-                </a>
+                </div>
 				
                 <!-- Code Verifying Certificate -->
                 <a href="https://github.com/dipta-roy/dipta-roy.github.io/blob/main/downloads/Code%20Verifying%20Certificates.zip?raw=true"
