--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
                     </div>
                 </a>
 
-                <a href="https://github.com/dipta-roy/AI-Model-Scanner" target="_blank" rel="noopener noreferrer"
+                <!--<a href="https://github.com/dipta-roy/AI-Model-Scanner" target="_blank" rel="noopener noreferrer"
                     class="github-card" data-category="ai">
                     <div class="github-card-header">
                         <i class="fab fa-github github-icon"></i>
@@ -582,7 +582,7 @@
                         <span class="github-language">Python</span>
                         <span class="github-link">View on GitHub →</span>
                     </div>
-                </a>
+                </a>-->
 
                 <a href="https://github.com/dipta-roy/AI-RAG" target="_blank" rel="noopener noreferrer"
                     class="github-card" data-category="ai">
@@ -608,20 +608,6 @@
                     <p>Collection of computer graphics algorithms and projects</p>
                     <div class="github-footer">
                         <span class="github-language">C++</span>
-                        <span class="github-link">View on GitHub →</span>
-                    </div>
-                </a>
-
-                <a href="https://github.com/dipta-roy/Text-To-Speech" target="_blank" rel="noopener noreferrer"
-                    class="github-card" data-category="others">
-                    <div class="github-card-header">
-                        <i class="fab fa-github github-icon"></i>
-                        <span class="github-stars">⭐</span>
-                    </div>
-                    <h3>Text-To-Speech</h3>
-                    <p>Advanced text-to-speech conversion with multiple voices</p>
-                    <div class="github-footer">
-                        <span class="github-language">Python</span>
                         <span class="github-link">View on GitHub →</span>
                     </div>
                 </a>
